<resources>
    <string name="app_name">Farmer Helper</string>
    <string name="addPlus">+</string>
    <string name="finish">Finalizar</string>
    <string name="alreadyExistsCulture">\nJá adicionou essa cultura!</string>
    <string name="cultureName">Nome da sua cultura</string>
    <string name="action_settings">Settings</string>
    <string name="insert_culture">Inserir Nova Cultura</string>
    <string name="errorNoCulture">Cultura inexistente!\nInsira uma cultura presente na lista.</string>
    <string name="yesButton">Sim</string>
    <string name="noButton">Não</string>
    <string name="title_activity_gps_info">GPS coordenadas</string>
    <string name="gpsManual">Introduza os dados: </string>
    <string name="latitude">Latitude (decimais):</string>
    <string name="longitude">Longitude (decimais):</string>
    <string name="gpsButton"> Confirmar</string>
    <string name="questionGPS">Está na localização da cultura</string>
    <string name="questionPlantCulture">Já plantou a cultura</string>
    <string name="questionDateCulture">Insira a data de plantação:</string>
    <string name="date">Data:</string>
    <string name="dateButton">Inserir</string>
    <string name="localGPS">Localização GPS</string>
    <string name="insertCoo">Quer introduzir as coordenadas manualmente para a cultura?</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_plant">PlantActivity</string>
    <string name="title_activity_date">DateActivity</string>
    <string name="nothing_inserted_yet">Ainda não adicionou nenhuma cultura!</string>
    <string name="where_to_do_it">Onde?</string>
    <string name="best_moon">Lua Recomendada</string>
    <string name="country_place">Zona do Pais</string>
    <string name="this_Week">Actividades Semanais</string>
    <string name="next_Week">Proxima Semana</string>
    <string name="insert_act_name">Nome da Actividade</string>
    <string name="insert_description">Insira uma descrição da nova actividade</string>
    <string name="alert">Alerta!</string>

    <color name="font_button">#fbf9ff</color>
    <color name="bar">#57d6b7</color>
    <color name="bg_button">#3b967c</color>
    <color name="bgPressed_button">#327e5b</color>
    <color name="border_button">#dd515151</color>
    <color name="borderPressed_button">#dd353535</color>
    <color name="font_removeButton">#dda0a0a0</color>
    <color name="background">#ffffff</color>
    <color name="shadow_button">#27000000</color>
    <color name="shadow_button_border">#1da7a7a7</color>
    <color name="font_selected">#266f64</color>
    <color name="font_unselected">#47b9a3</color>
    
    <string name="title_activity_calendar">Agenda</string>
    <string name="title_activity_list_act">Lista de Atividades</string>
    <string name="title_activity_act_profile">ActProfileActivity</string>
    <string name="add_new_act">Adicionar Nova Actividade</string>
    <string name="title_activity_add_new_act">Nova Actividade</string>
    <string name="title_activity_list_cultures">ListCultures</string>
    <string name="listCultures">Lista das culturas</string>
    <string name="title_activity_add_new_culture">AddNewCultureActivity</string>

    <string name="hello_world">Hello world!</string>

</resources>
