<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="pinkteampdm.farmerhelper.PlantActivity"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/textView_plant"
        android:text="@string/questionPlantCulture"
        android:textStyle="bold"
        android:textColor="#41a075"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:layout_above="@+id/buttonYes"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="73dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:id="@+id/buttonYes"
        android:text="@string/yesButton"
        android:drawableLeft="@drawable/sucess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickNextActivity"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/textView_plant"
        android:background="@drawable/button_style"
        android:textColor="@color/font_button"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:id="@+id/buttonNo"
        android:text="@string/noButton"
        android:drawableLeft="@drawable/notsucess1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickInsertData"
        android:layout_alignEnd="@+id/textView_plant"
        android:layout_below="@+id/textView_plant"
        android:layout_alignBottom="@+id/buttonYes"
        android:background="@drawable/button_style"
        android:textColor="@color/font_button"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img_culture"
        android:src="@drawable/culture"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/textView_plant" />


</RelativeLayout>
