<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="pinkteampdm.farmerhelper.LocationActivity">

    <TextView
        android:id="@+id/textView_chooseCulture"
        android:text="@string/questionGPS"
        android:textStyle="bold"
        android:textColor="#41a075"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="75dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        />

    <Button
        style="?android:attr/buttonStyle"
        android:id="@+id/buttonYes"
        android:text="@string/yesButton"
        android:drawableLeft="@drawable/sucess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="locationAutomatic"
        android:background="@drawable/button_style"
        android:textColor="@color/font_button"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/textView_chooseCulture"
        android:layout_marginStart="37dp" />

    <Button
        style="?android:attr/buttonStyle"
        android:id="@+id/buttonNo"
        android:text="@string/noButton"
        android:drawableLeft="@drawable/notsucess1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="71dp"
        android:layout_alignBottom="@+id/buttonYes"
        android:layout_alignEnd="@+id/textView_chooseCulture"
        android:layout_alignTop="@+id/buttonYes"
        android:onClick="locationManual"
        android:background="@drawable/button_style"
        android:textColor="@color/font_button"
        />

    <ImageView
        android:id="@+id/imageView2"
        android:src="@drawable/farmgps2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
