<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/relativeLayout_InicialLayout"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Escolha as suas culturas"
        android:id="@+id/textView_EscolhaCultura"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#41a075" />

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_NomeCultura"
        android:layout_below="@+id/textView_EscolhaCultura"
        android:layout_alignParentStart="true"
        android:layout_marginTop="46dp"
        android:hint="@string/cultureName"
        android:textColorHint="#66186249"
        android:layout_toStartOf="@+id/button_AddCultura" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/round_button_bg"
        android:text="@string/addPlus"
        android:textSize="45dp"
        android:gravity="center_vertical"
        android:textColor="@color/font_button"
        android:onClick="onClickAddNameButton"
        android:id="@+id/button_AddCultura"
        android:layout_alignTop="@+id/editText_NomeCultura"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/editText_NomeCultura" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:layout_marginTop="15dp"
        android:id="@+id/button_Finalizar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_style"
        android:textColor="@color/font_button"
        android:onClick="onClickFinalize"/>

    <ScrollView
        android:layout_width="233dp"
        android:layout_height="match_parent"
        android:id="@+id/scrollView_zonaNomes"
        android:layout_gravity="center"
        android:layout_alignParentStart="true"
        android:fillViewport="false"
        android:layout_alignEnd="@+id/button_AddCultura"
        android:layout_above="@+id/button_Finalizar"
        android:layout_below="@+id/editText_NomeCultura">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout_nomes">

        </LinearLayout>
    </ScrollView>



</RelativeLayout>
